--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpaceCowboy-ProjetoFinal-dev-iza</name>
+	<name>copiaJogo_src</name>
 	<comment></comment>
 	<projects>
 	</projects>
